--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">AegisAndroid</string>
+    <string name="app_name">Aegis Vault</string>
+    <string name="autofill_description">Securely fill your passwords and forms with Aegis Vault.</string>
+    <string name="autofill_unlock_prompt">🛡️ Aegis: Unlock Vault</string>
+    <string name="autofill_no_match">🛡️ Aegis: No Entries Found</string>
 </resources>
